create community model

--- a/public/css/stylesheet_header.css
+++ b/public/css/stylesheet_header.css
@@ -48,6 +48,14 @@ p {
   padding:0;
 }
 
-.header-list a {
+.menu-list {
   color: white;
+}
+
+.nav-item {
+  display:inline;
+}
+
+i {
+  display:inline;
 }
