--- a/public/css/stylesheet_nav.css
+++ b/public/css/stylesheet_nav.css
@@ -11,3 +11,11 @@
 .navbar-back a {
     font-family: 'Bebas Neue', cursive;
 }
+
+.date {
+    font-size: 24px;
+}
+
+.date span {
+    font-size: 18px;
+}
