--- a/public/css/stylesheet_nav.css
+++ b/public/css/stylesheet_nav.css
@@ -2,11 +2,13 @@
 
 .navbar-back {
     margin-top: 5px;
-    background-color: rgba(164,46,0,0.7);
+    background-color: rgba(40,40,40,0.7);
     border-radius: 5px;
     border: 2px solid rgba(0,0,0,0.7);
     width: 100%;
 }
+
+.nav
 
 .navbar-back a {
     font-family: 'Bebas Neue', cursive;
