--- a/public/css/stylesheet_header.css
+++ b/public/css/stylesheet_header.css
@@ -4,12 +4,14 @@
 li {
   list-style: none;
   margin-top: 0;
+  color:white;
 }
 
 a {
   text-decoration: none;
   margin-top: 0;
   font-size: 12px;
+  color:white;
 }
 
 img {
@@ -20,15 +22,17 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0;
   padding-top: 0;
+  color: white;
 }
 
 p {
   margin-top: 0;
   margin-bottom: 0;
+  color: white;
 }
 
 .header-container {
-  background-color: rgba(40,40,40,0.7);
+  background-color: rgba(255,255,255,1);
   border-bottom: 5px solid rgba(0,0,0,0.7);
   width: 100%;
   position:fixed;
@@ -39,7 +43,7 @@ p {
   opacity: 0.9;
   font-family: 'Bowlby One SC', cursive;
   padding-left: 3px;
-  border-left: white 1px solid;
+  border-left: black 1px solid;
 }
 
 .header-logo {
