--- a/public/css/stylesheet_mypage.css
+++ b/public/css/stylesheet_mypage.css
@@ -28,6 +28,13 @@
     margin-left: 10px;
 }
 
+.my-profile {
+    font-size: 38px;
+    font-family: 'Bowlby One SC', cursive;
+}
+
+
+
 /*上側ボックス*/
 .my-profile-container {
     margin: 10px;
@@ -35,11 +42,11 @@
 
 .profile-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .image-container {
-    width: 25%;
+    width: 30%;
 }
 
 .profile-image {
@@ -50,7 +57,7 @@
 }
 
 .self-introduction {
-    width: 65%;
+    width: 55%;
 }
 
 
