--- a/public/css/stylesheet_mypage.css
+++ b/public/css/stylesheet_mypage.css
@@ -12,148 +12,9 @@
     font-family: 'Bebas Neue', cursive;
 }
 
-.main-container {
-    display:flex;
-    justify-content: space-around;
-}
-
-.nav-wrapper {
-    width: 30%;
-    border-radius: 3px;
-}
-
-.article-container {
-    width: 60%;
-    border-radius: 3px;
-    margin-left: 10px;
-}
-
-.my-profile {
-    font-size: 38px;
-    font-family: 'Bowlby One SC', cursive;
-}
-
-
-
-/*上側ボックス*/
-.my-profile-container {
-    margin: 10px;
-}
-
-.profile-container {
-    display: flex;
-    justify-content: space-around;
-}
-
-.image-container {
-    width: 30%;
-}
-
 .profile-image {
-    background-color: white;
-    border-radius: 5px;
     width: 100%;
-    padding: 5px;
-}
-
-.self-introduction {
-    width: 55%;
+    height: 70%;
 }
 
 
-/*左側ボックス*/
-
-.greetings, .nav-name, .article-name {
-    font-size: 22px;
-    font-weight: 800;
-    padding: 15px 10px 10px 10px;
-    text-align: center;
-}
-
-.user-name span {
-    font-size: 18px;
-}
-
-.user-name {
-    padding-top: 0;
-    font-size: 22px;
-    font-weight: 800;
-    padding: 0 15px;
-    text-align: center;
-}
-
-
-.nav-name {
-    font-size: 18px;
-}
-
-.nav-para {
-    margin-left: 15px;
-    margin-top: 10px;
-}
-
-.comment-imp {
-    color: white;
-    font-weight: 700;
-}
-
-
-
-
-
-/*右側ボックス*/
-
-.search-box {
-    margin: 5px 0 10px 15px;
-}
-
-#search-box {
-    border-radius: 20%;
-}
-
-.community-name, .c-box {
-    text-align: center;
-    margin-top: 10px;
-}
-
-.com-fix ul {
-    padding: 0;
-}
-
-th, td {
-    color:white;
-}
-
-td a {
-    font-weight: 800;
-    font-size: 16px;
-}
-
-td a:hover {
-    color: grey;
-}
-
-
-
-/*メディアクエリ*/
-
-@media (max-width:600px) {
-    .main-container {
-        display: block;
-    }
-    
-    .nav-wrapper {
-    width: 90%;
-    border-radius: 3px;
-    padding-left: 10px;
-    margin: 0 auto;
-    }
-
-    .article-container {
-    width: 90%;
-    border-radius: 3px;
-    padding-left: 10px;
-    margin: 0 auto;
-    }
-    
-}
